Fix(header): spacing fix

--- a/packages/elvis/src/components/header.scss
+++ b/packages/elvis/src/components/header.scss
@@ -596,7 +596,7 @@ $sidebar-mobile-z-index: -2;
       display: flex;
       justify-content: center;
       align-items: center;
-      margin: 16px 7px;
+      margin: 12px 7px;
       height: 48px;
       width: 48px;
       border-radius: 50%;
